hphp/hack/test/typecheck/const_attribute/static/single_const_late_init.php
<?hh

class A {
  <<__Const, __LateInit>> public static int $a = 5;
}
